--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -9,5 +9,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.0" />
+  </ItemGroup>
+
 
 </Project>
