--- a/Services.Tests/Services.Tests.csproj
+++ b/Services.Tests/Services.Tests.csproj
@@ -20,7 +20,7 @@
 
   
   <ItemGroup> 
-    <Content Include="Resources\**"> 
+    <Content Include="..\Resources\input-file.txt"> 
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
     </Content> 
   </ItemGroup>
