--- a/Infrastructure.Tests/Infrastructure.Tests.csproj
+++ b/Infrastructure.Tests/Infrastructure.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup> 
-    <Content Include="Resources\**"> 
+    <Content Include="..\Resources\input-file.txt"> 
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
     </Content> 
   </ItemGroup>
